[gd_scene load_steps=6 format=3 uid="uid://vij7deigdiea"]

[ext_resource type="Script" path="res://scripts/rebus.gd" id="1_rmkyc"]

[sub_resource type="Animation" id="Animation_5rx21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_28o8j"]
resource_name = "new"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -648), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_31bkd"]
resource_name = "next"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 648)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18n35"]
_data = {
"RESET": SubResource("Animation_5rx21"),
"new": SubResource("Animation_28o8j"),
"next": SubResource("Animation_31bkd")
}

[node name="rebus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4608.0
offset_bottom = 2592.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rmkyc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_18n35")
}

[node name="image" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 374.0
offset_top = 68.0
offset_right = 724.0
offset_bottom = 274.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 440.0
offset_right = 690.0
offset_bottom = 471.0
placeholder_text = "Разгадка"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 514.0
offset_top = 512.0
offset_right = 612.0
offset_bottom = 543.0
text = "Проверить"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 576.0
offset_right = 621.0
offset_bottom = 607.0
disabled = true
text = "Следующий"

[node name="main" type="Button" parent="."]
layout_mode = 0
offset_left = 1002.0
offset_top = 568.0
offset_right = 1105.0
offset_bottom = 599.0
text = "На главную"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="main" to="." method="_on_main_pressed"]
